# JupyterNotebooks

./: .gitignore  AGENT_FACTORY_PLATFORM_COMPLETE.md  AGENT_FACTORY_PLATFORM_DESIGN.md  ARCHITECTURE.md  Agentic_Notebook.ipynb  CI_STABILIZATION_PLAN.md  COMPLETION_CHECKLIST.md  COMPLETION_REPORT.md  COMPLETION_SUMMARY.md  CONTRIBUTING.md  DEV_WORKFLOW.md  FINAL_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_PLAN_COMPLETION_STATUS.md  IMPLEMENTATION_SUMMARY.md  Makefile  PERFECT_SCORE_REPORT.md  PHASE1_IMPORT_FIXES.md  PHASE2_COMPLETE.md  PHASE2_COMPLETION_SUMMARY.md  PHASES_4_5_6_COMPLETE.md  PHASE_4_5_6_IMPLEMENTATION.md  PROJECT_COMPLETION_PLAN.md  README.md  SHOWCASE_DEMOS.md  SPRINT_CLOSEOUT_SUMMARY.md  SPRINT_REVIEW_REPORT.md  SPRINT_STATUS.md  USE_CASES.md  VALUE_PROPOSITION.md  pyproject.toml  pytest.ini
agent_factory/: __init__.py
docker/: Dockerfile  docker-compose.prod.yml  docker-compose.yml
docs/: 39_DAY_SPRINT_PLAN.md  API_REFERENCE.md  ARCHITECTURE_DETAILED.md  BUSINESS_CASE.md  COMPREHENSIVE_24_WEEK_IMPLEMENTATION_PLAN.md  EDUCATION_FOCUS.md  EDUCATION_QUICK_START.md  EXAMPLES_COMPREHENSIVE.md  EXAMPLES_GALLERY.md  EXECUTIVE_SUMMARY.md  FEATURES.md  FINANCIAL_MODEL_SUMMARY.md  GAP_ANALYSIS.md  GETTING_STARTED.md  GTM_PLAN.md  IMPLEMENTATION_PLAN_SUMMARY.md  IMPLEMENTATION_ROADMAP.md  LAUNCH_CHECKLIST.md  MHE_PARTNERSHIP.md  MIGRATION_GUIDE.md  PRICING_TIERS.md  QUICK_START.md  RESOURCE_REQUIREMENTS.md  SECURITY.md  SUCCESS_METRICS_TRACKING.md  TROUBLESHOOTING.md  USER_GUIDE.md  USE_CASE_BLUEPRINTS.md  VISION_AND_STRATEGY.md
examples/: basic_agent.py  customer_support_bot.py  education_learning_path.py  education_student_support.py  minimal_working_example.py  multi_agent_system.py
k8s/: api-deployment.yaml  configmap.yaml  ingress.yaml  kustomization.yaml  monitoring-service-monitor.yaml  namespace.yaml  postgres-deployment.yaml  redis-deployment.yaml  secret.yaml
scripts/: dev_setup.sh  (+2 more)
(+195 files in other folders)
